Selection API: Some functions should throw InvalidNodeTypeError and IndexSizeError.

* setBaseAndExtent() should throw InvalidNodeTypeError for DOCTYPEs.

* setBaseAndExtent() should throw IndexSizeError for too large offsets.

* extend() should InvalidNodeTyepError for DOCTYPEs.

* collapse() should call checkNodeWOffset() earlier than isValidForPosition()
  https://www.w3.org/TR/selection-api/#dom-selection-collapse
  checkNodeWOffset() is for step 2, isValidForPosition() is for step 3.

New behavior matches to Edge, Firefox, and Selection API standard.
This CL fixes 589 sub-tests in external/wpt/selection/.

* fast/forms/file/file-crash-by-runin-parent.html
This CL removes the test because the test is obsolete. We removed display:run-in
several years ago.

BUG=691422

Review-Url: https://codereview.chromium.org/2693813002
Cr-Commit-Position: refs/heads/master@{#450006}

Former-commit-id: 66f70447e561ce2d850be2e2ef4d1a1be4364ac7