third_party/WebKit/LayoutTests/editing/selection/script-tests/DOMSelection-DocumentType.js
@@ -5,16 +5,16 @@ description("Test to check if setBaseAndExtent guard node with null owner docume
 var sel = window.getSelection();
 var docType = document.implementation.createDocumentType('c', null, null);
 
-sel.setBaseAndExtent(docType, 0, null, 0);
+shouldThrow("sel.setBaseAndExtent(docType, 0, null, 0)");
 shouldBeNull("sel.anchorNode");
 
 sel.setBaseAndExtent(null, 0, docType, 0);
 shouldBeNull("sel.anchorNode");
 
-sel.collapse(docType);
+shouldThrow("sel.collapse(docType)");
 shouldBeNull("sel.anchorNode");
 
-sel.selectAllChildren(docType);
+shouldThrow("sel.selectAllChildren(docType)");
 shouldBeNull("sel.anchorNode");
 
 shouldThrow("sel.extend(docType, 0)");
